kubernetes/apps/portfolio/philipp-rosch-site/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: philipp-rosch-site
spec:
  selector:
    app.kubernetes.io/name: philipp-rosch-site
  ports:
    - name: http
      port: 80
      targetPort: http
